// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResizeIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ResizeIcon"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15.146,4.178 L15.853,4.885 L4.853,15.885 L4.146,15.178 L15.146,4.178 z"
  />
  <path
    d="M15.146,8.178 L15.853,8.885 L8.853,15.885 L8.146,15.178 L15.146,8.178 z"
  />
  <path
    d="M15.146,12.178 L15.853,12.885 L12.853,15.885 L12.146,15.178 L15.146,12.178 z"
  />
</Icon>
`;

exports[`ResizeIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ResizeIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15.146,4.178 L15.853,4.885 L4.853,15.885 L4.146,15.178 L15.146,4.178 z"
  />
  <path
    d="M15.146,8.178 L15.853,8.885 L8.853,15.885 L8.146,15.178 L15.146,8.178 z"
  />
  <path
    d="M15.146,12.178 L15.853,12.885 L12.853,15.885 L12.146,15.178 L15.146,12.178 z"
  />
</Icon>
`;

exports[`ResizeIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ResizeIcon"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15.146,4.178 L15.853,4.885 L4.853,15.885 L4.146,15.178 L15.146,4.178 z"
  />
  <path
    d="M15.146,8.178 L15.853,8.885 L8.853,15.885 L8.146,15.178 L15.146,8.178 z"
  />
  <path
    d="M15.146,12.178 L15.853,12.885 L12.853,15.885 L12.146,15.178 L15.146,12.178 z"
  />
</Icon>
`;
